# ProjectClifford

./: README.md
Clifford_Sim_Model/: CMakeLists.txt  package.xml
Clifford_Sim_Model/config/: joint_names_Clifford_Sim_Model.yaml
Clifford_Sim_Model/launch/: display.launch  gazebo.launch
Clifford_Sim_Model/meshes/: base_link_cover.STL  front_left_wrist-link.STL  front_right_wrist-link.STL
Clifford_Sim_Model/urdf/: Clifford_Sim_Model.csv  Clifford_Sim_Model.urdf
clifford-ik/: package.xml  setup.cfg  setup.py
clifford-ik/clifford-ik/: IK_spotmicro.py
clifford-ik/scripts/: IK_spotmicro.py
clifford_lcd/: package.xml  setup.cfg  setup.py
clifford_lcd/clifford_lcd/: lcd2.py
clifford_sim_1/: CMakeLists.txt  package.xml
clifford_sim_1/launch/: clifford_sim_1.launch.py
clifford_sim_1/meshes/: base_link_chassis.STL  front_left_arm-link.STL  front_left_shoulder-link.STL  front_right_arm-link.STL  front_right_shoulder-link.STL  rear_left_arm-link.STL  rear_left_shoulder-link.STL  rear_left_wrist-link.STL  rear_right_arm-link.STL  rear_right_shoulder-link.STL  rear_right_wrist-link.STL
clifford_sim_1/rviz/: rviz_basic_settings.rviz
clifford_sim_1/urdf/: clifford_sim_1.urdf
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
jointstatepub/: package.xml  setup.cfg  setup.py
left_leg_demo/: CMakeLists.txt
left_leg_demo_new/: CMakeLists.txt  package.xml
log/: latest_build
servo_driver/: package.xml  setup.cfg  setup.py
teleop_controller/: package.xml  setup.cfg  setup.py
ultrasonic/: package.xml  setup.cfg  setup.py
(+43 files in other folders)
